Matrix from server

--- a/files/index.html
+++ b/files/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -25,6 +26,7 @@
     <script src="./grassEater.js"></script>
     <script src="./grassEaterEater.js"></script>
     <script src="./script.js"></script>
+
 
     <table>
         <tr>
@@ -75,8 +77,8 @@
     </script>
 
     <!--<script>
-   
-   
+
+
    function addbuttons(clasS,functioN,value){
 
 
@@ -88,7 +90,7 @@
     document.body.appendChild(btn);
     // btn.addEventListener('click','restart',false);
 
- 
+
 
 // var stop = '<button class = "stop" onclick="stop()">Stop</button>'
 // var restart = '<button class = "restart" onclick="restart()">Restart</button>'
