--- a/files/info.html
+++ b/files/info.html
@@ -23,9 +23,9 @@
     Hello reader!!!<br>
 This game was created by <img src="./png/LDN.png"> team.<br><br>
 
-style.css , grassEater.js , fire.js by Դավիթ Մազմանյան (davit.mazmanyan1.y@tumo.org)<br>
-index.html , info.html , Grass.js by Ներսես Չոբանյան (nerses.chobanyan.y@tumo.org)<br>
-script.js ,  fireEx.js , grassEaterEater.js ,all sounds by Լևոն Հովհաննիսյան (levon.h12.y@tumo.org)<br><br>
+style.css by Դավիթ Մազմանյան (davit.mazmanyan1.y@tumo.org)<br>
+index.html , info.html by Ներսես Չոբանյան (nerses.chobanyan.y@tumo.org)<br>
+script.js ,  fireEx.js , grassEaterEater.js , grassEater.js , fire.js , Grass.js , all sounds by Լևոն Հովհաննիսյան (levon.h12.y@tumo.org)<br><br>
 
 <a href="http://dproconline.mywebcommunity.org/GameOfLife/">published</a> by Լևոն Հովհաննիսյան <br>
 
