--- a/files/index.html
+++ b/files/index.html
@@ -19,12 +19,12 @@
     </h1>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <!-- <script src="./matrix.js"></script> -->
-    <script src="./live.js"></script>
+    <!-- <script src="./live.js"></script>
     <script src="./fireEx.js"></script>
     <script src="./Grass.js"></script>
     <script src="./fire.js"></script>
     <script src="./grassEater.js"></script>
-    <script src="./grassEaterEater.js"></script>
+    <script src="./grassEaterEater.js"></script> -->
     <script src="./script.js"></script>
 
 
