--- a/files/index.html
+++ b/files/index.html
@@ -36,6 +36,7 @@
             <td><button id="button2" class="button2" onclick="pred()">predator</button></td>
             <td><button id="buttongrass" class="buttongrass" onclick="grass()">Grass</button></td>
             <td><button id="buttonfire" class="buttonfire" onclick="createFire()">Fire</button></td>
+            <td><button id="buttonfireMan" class="buttonfireMan" onclick="createFireMan()">FireMan</button></td>
             <td><button id="fireЕxtinguisher" class="fireЕxtinguisher" onclick="fireЕxtinguisher()">fire
                     extinguisher</button></td>
             <td><button id="kill" class="kill" onclick="setkill()">destroy everything</button></td>
@@ -70,10 +71,13 @@
         // alert(action)
         if (action == "restart") {
 
-            start(false);
+            
+            setTimeout(() => { start(false); }, 200);
         } else if (action == "killall") {
             kill();
         }
+
+
     </script>
 
     <!--<script>
