--- a/files/info.html
+++ b/files/info.html
@@ -21,13 +21,13 @@
 </style>
 <body>
     Hello reader!!!<br>
-This game was created by <img src="./png/LDN.png"> team.<br><br>
+This game was created by <img src="./png/LDN.png"><br><br>
 
-style.css by Դավիթ Մազմանյան (davit.mazmanyan1.y@tumo.org)<br>
-index.html , info.html by Ներսես Չոբանյան (nerses.chobanyan.y@tumo.org)<br>
-script.js ,  fireEx.js , grassEaterEater.js , grassEater.js , fire.js , Grass.js , all sounds by Լևոն Հովհաննիսյան (levon.h12.y@tumo.org)<br><br>
+style.css(20%) by Դավիթ Մազմանյան (davit.mazmanyan1.y@tumo.org)<br>
+index.html(50%) , info.html(95%) by Ներսես Չոբանյան (nerses.chobanyan.y@tumo.org)<br>
+script.js ,  fireEx.js , grassEaterEater.js , grassEater.js , fire.js , Grass.js , live.js , info.html(5%) , index.html(50%) , style.css(80%) , all sounds by Լևոն Հովհաննիսյան (levon.h12.y@tumo.org)<br><br>
 
-<a href="http://dproconline.mywebcommunity.org/GameOfLife/">published</a> by Լևոն Հովհաննիսյան <br>
+<!-- <a href="http://dproconline.mywebcommunity.org/GameOfLife/">published</a> by Լևոն Հովհաննիսյան <br> -->
 
 </body>
 </html>
