--- a/files/index.html
+++ b/files/index.html
@@ -56,7 +56,7 @@
 
 
 
-    <table>
+    <table id="stats" style="display: none">
         <tr>
             <td>Grass</td>        
             <td id = "GrassVal"></td>     
