--- a/files/index.html
+++ b/files/index.html
@@ -59,31 +59,38 @@
     <table id="stats" style="display: none">
         <tr>
             <td>Grass</td>        
-            <td id = "GrassVal"></td>     
+            <td id = "GrassVal"></td>    
+            <td id = "GrassValLive"></td>   
         </tr>
         <tr>
             <td>GrassEater</td>        
-            <td id = "GrassEaterVal"></td>     
+            <td id = "GrassEaterVal"></td>    
+            <td id = "GrassEaterValLive"></td>    
         </tr>
         <tr>
             <td>GrassEaterEater   </td>        
             <td id = "GrassEaterEaterVal"></td>     
+            <td id = "GrassEaterEaterValLive"></td>   
         </tr>
         <tr>
             <td>FireMan</td>        
             <td id = "FireManVal"></td>     
+            <td id = "FireManValLive"></td> 
         </tr>
         <tr>
             <td>fireEx</td>        
-            <td id = "fireExVal"></td>     
+            <td id = "fireExVal"></td>    
+            <td id = "fireExValLive"></td>    
         </tr>
         <tr>
             <td>Fire</td>        
             <td id = "FireVal"></td>     
+            <td id = "FireValLive"></td> 
         </tr>
         <tr>
             <td>all</td>        
-            <td id = "allVal"></td>     
+            <td id = "allVal"></td> 
+            <td id = "allValLive"></td>    
         </tr>
     </table>
 
